# erc_dex/erc_dex/api/orders_api.py
@@ -419,6 +419,105 @@ class OrdersApi(object):
             _request_timeout=params.get('_request_timeout'),
             collection_formats=collection_formats)
 
+    def get_order_by_id(self, order_id, **kwargs):  # noqa: E501
+        """get_order_by_id  # noqa: E501
+
+        Get a single order by ID  # noqa: E501
+        This method makes a synchronous HTTP request by default. To make an
+        asynchronous HTTP request, please pass async=True
+        >>> thread = api.get_order_by_id(order_id, async=True)
+        >>> result = thread.get()
+
+        :param async bool
+        :param float order_id: (required)
+        :return: IOrderData
+                 If the method is called asynchronously,
+                 returns the request thread.
+        """
+        kwargs['_return_http_data_only'] = True
+        if kwargs.get('async'):
+            return self.get_order_by_id_with_http_info(order_id, **kwargs)  # noqa: E501
+        else:
+            (data) = self.get_order_by_id_with_http_info(order_id, **kwargs)  # noqa: E501
+            return data
+
+    def get_order_by_id_with_http_info(self, order_id, **kwargs):  # noqa: E501
+        """get_order_by_id  # noqa: E501
+
+        Get a single order by ID  # noqa: E501
+        This method makes a synchronous HTTP request by default. To make an
+        asynchronous HTTP request, please pass async=True
+        >>> thread = api.get_order_by_id_with_http_info(order_id, async=True)
+        >>> result = thread.get()
+
+        :param async bool
+        :param float order_id: (required)
+        :return: IOrderData
+                 If the method is called asynchronously,
+                 returns the request thread.
+        """
+
+        all_params = ['order_id']  # noqa: E501
+        all_params.append('async')
+        all_params.append('_return_http_data_only')
+        all_params.append('_preload_content')
+        all_params.append('_request_timeout')
+
+        params = locals()
+        for key, val in six.iteritems(params['kwargs']):
+            if key not in all_params:
+                raise TypeError(
+                    "Got an unexpected keyword argument '%s'"
+                    " to method get_order_by_id" % key
+                )
+            params[key] = val
+        del params['kwargs']
+        # verify the required parameter 'order_id' is set
+        if ('order_id' not in params or
+                params['order_id'] is None):
+            raise ValueError("Missing the required parameter `order_id` when calling `get_order_by_id`")  # noqa: E501
+
+        collection_formats = {}
+
+        path_params = {}
+
+        query_params = []
+        if 'order_id' in params:
+            query_params.append(('orderId', params['order_id']))  # noqa: E501
+
+        header_params = {}
+
+        form_params = []
+        local_var_files = {}
+
+        body_params = None
+        # HTTP header `Accept`
+        header_params['Accept'] = self.api_client.select_header_accept(
+            ['application/json'])  # noqa: E501
+
+        # HTTP header `Content-Type`
+        header_params['Content-Type'] = self.api_client.select_header_content_type(  # noqa: E501
+            ['application/json'])  # noqa: E501
+
+        # Authentication setting
+        auth_settings = []  # noqa: E501
+
+        return self.api_client.call_api(
+            '/order', 'GET',
+            path_params,
+            query_params,
+            header_params,
+            body=body_params,
+            post_params=form_params,
+            files=local_var_files,
+            response_type='IOrderData',  # noqa: E501
+            auth_settings=auth_settings,
+            async=params.get('async'),
+            _return_http_data_only=params.get('_return_http_data_only'),
+            _preload_content=params.get('_preload_content', True),
+            _request_timeout=params.get('_request_timeout'),
+            collection_formats=collection_formats)
+
     def get_order_config(self, maker_address, taker_address, maker_asset_amount, taker_asset_amount, maker_asset_data, taker_asset_data, exchange_address, **kwargs):  # noqa: E501
         """get_order_config  # noqa: E501
 
